--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>My Text Page</title>
 </head>
 <body>
-    <p>这是你想展示的文字内容。</p >
+    
+    <p>谨以此站感谢自己的父母，记录生活中的快乐。</p >
+    <p>更像是我的脑海</p>
 </body>
 </html>
