--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     
     <p>谨以此站感谢自己的父母，记录生活中的快乐。</p >
-    <p>更像是我的脑海</p>
+    <p>有时候，自己的记忆停留在发生的那件事的那一刻，而那一刻就像坐在以光速行驶的公交车上看到的大楼上挂着的时钟，那是静止的时间</p>
 </body>
 </html>
