--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
     <title>My Text Page</title>
 </head>
 <body>
-    <h3>谨以此站记录生活</h3>
-    <p>有时候，自己的记忆停留在发生那件事的那一刻，而那一刻就像坐在以光速行驶的公交车上看到的大楼上挂着的时钟，那是静止的时间</p>
-    <p>2024年8月1日</p>
-    <p>工作里有05年的同事，他去读大学了，me是99年的，而我却要坚守这份工作，19岁我还在读高三吧</p>
-    <p>    同事都走了很多，目测认为这工作没钱途，我可能只拿这来过度一段时间吧，
-        我竟然无言以对，怎么早就可以体验工作的生活，唉，他们都活出了他们自己，现在呢，感觉是压缩加密活了，轮到我们一线员工提tk了。
-    </p>
-    <p>    我住的地方空调咋这么像我高一教室里的空调呢，水都是漏在屋里的，还好机智如我，引流法用桶子接住了，</p>
-    
+    <center><h3>谨以此站记录生活</h3></center>
+    <pre>    有时候，自己的记忆停留在发生那件事的那一刻，而那一刻就像坐在以光速行驶的公交车上看到的大楼上挂着的时钟，那是静止的时间</pre>
+    <center>2024年8月1日</center>
+    <pre>    工作里有05年的同事，他去读大学了，me是99年的，而我却要坚守这份工作，19岁我还在读高三吧</pre>
+    <pre>    同事都走了很多，目测认为这工作没钱途，我可能只拿这来过度一段时间吧，我竟然无言以对，怎么早就可以体验工作的生活，唉，他们都活出了他们自己，现在呢，感觉是压缩加密活了，轮到我们一线员工提tk了。</pre>
+    <pre>    我住的地方空调咋这么像我高一教室里的空调呢，水都是漏在屋里的，还好机智如我，引流法用桶子接住了，</pre>
 </body>
 </html>
