--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Text Page</title>
 </head>
 <body>
-    <center><h3>谨以此站记录生活</h3></center>
+    <h3 style="text-align:center;">谨以此站记录生活</h3>
     <pre>    有时候，自己的记忆停留在发生那件事的那一刻，而那一刻就像坐在以光速行驶的公交车上看到的大楼上挂着的时钟，那是静止的时间</pre>
     <center>2024年8月1日</center>
     <pre>    工作里有05年的同事，他去读大学了，me是99年的，而我却要坚守这份工作，19岁我还在读高三吧</pre>
