--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <pre>    同事都走了很多，目测认为这工作没钱途，我可能只拿这来过度一段时间吧，我竟然无言以对，怎么早就可以体验工作的生活，唉，他们都活出了他们自己，现在呢，感觉是压缩加密活了，轮到我们一线员工提tk了。</pre>
     <pre>    我住的地方空调咋这么像我高一教室里的空调呢，水都是漏在屋里的，还好机智如我，引流法用桶子接住了，</pre>
     <p style="text-align:center;">2024年8月3日</p>
-    <img src="不能进去的楼.jpg" alt="城墙">
+    <img src="不能进去的楼.jpg" alt="城墙" style="display: block; margin-left:auto; margin-right: auto;">
 </body>
 </html>
