--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <pre>    我住的地方空调咋这么像我高一教室里的空调呢，水都是漏在屋里的，还好机智如我，引流法用桶子接住了，</pre>
     <p style="text-align:center;">2024年8月3日</p>
     <img src="不能进去的楼.jpg" alt="城墙" style="display: block; margin-left:auto; margin-right: auto;">
+    <pre>    今天是周六</pre>
 </body>
 </html>
