--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <p style="text-align:center;">2024年8月3日</p>
     <img src="不能进去的楼.jpg" alt="城墙" style="display: block; margin-left:auto; margin-right: auto;">
     <pre>    今天是周六</pre>
+    <img src="https://web.ugreen.cloud/web/#/share/b30116c7a8e34432b6dddddea78acfdf" alt="现代战舰不好玩了">
 </body>
 </html>
