--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <img src="不能进去的楼.jpg" alt="城墙" style="display: block; margin-left:auto; margin-right: auto;">
     <pre>    今天是周六</pre>
     <img src="https://photos.google.com/share/AF1QipMei2sRBREfNsRXcGI0lGTJDzH32F2ZAtRBoVlk2GtpRHy2ilCvxRcQIOIfbADugg/photo/AF1QipMPBKGzMqmIqWCLvK79s2UWmbuVQJhX6Rj6vLEx?key=LThlNGJFRFhPTmdKRzVuOExZNE53aWw4eHhtNVJB" alt="还是条墙" style="display: block; margin-left:auto; margin-right: auto;">
+    <img src="https://photos.app.goo.gl/3SpdniG1RrU2G5P97" alt="还是条墙" style="display: block; margin-left:auto; margin-right: auto;">
 </body>
 </html>
