--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
     <p style="text-align:center;">2024年8月3日</p>
     <img src="不能进去的楼.jpg" alt="城墙" style="display: block; margin-left:auto; margin-right: auto;">
     <pre>    今天是周六</pre>
+    <p style="text-align:center;">2024年8月4日 星期日</p>
+    <video width="600" controls>
+        <source src="https://your-username.github.io/your-repo-name/assets/videos/少年谢尔顿.Young.Sheldon.S01E01.WEBrip.720p-人人影视.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
 </body>
 </html>
